feat: implementação de funcionalidades e testes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
             "@src/*": ["./src/*"],
             "@entity/*": ["./src/entity/*"],
             "@repository/*": ["./src/repository/*"],
+            "@gateway/*": ["./src/gateway/*"],
             "@useCase/*": ["./src/useCase/*"],
             "@routes/*": ["./src/routes/*"],
             "@utils/*": ["./src/utils/*"]
