--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "author": "Gabriel Barreto <gsbarretobr@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mongoose": "^8.3.5",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
