--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@cucumber/cucumber": "^10.7.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
     "@vitest/coverage-v8": "^1.5.2",
@@ -25,6 +26,9 @@
   "scripts": {
     "dev": "nodemon -e ts --exec \"ts-node -r tsconfig-paths/register src/index.ts\"",
     "test": "vitest --watch",
-    "coverage": "vitest --ui --coverage.enabled=true"
+    "coverage": "vitest --ui --coverage.enabled=true",
+    "clean": "rm -rf dist",
+    "build": "tsc",
+    "bdd": "cucumber-js"
   }
 }
