--- a/package.json
+++ b/package.json
@@ -13,13 +13,22 @@
   },
   "devDependencies": {
     "@cucumber/cucumber": "^10.7.0",
+    "@eslint/js": "^9.3.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "@typescript-eslint/parser": "^7.9.0",
     "@vitest/coverage-v8": "^1.5.2",
     "@vitest/ui": "^1.5.2",
+    "eslint": "^8.0.1",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+    "eslint-plugin-promise": "^6.0.0",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
+    "typescript-eslint": "^7.9.0",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.5.2"
   },
@@ -29,6 +38,8 @@
     "coverage": "vitest --ui --coverage.enabled=true",
     "clean": "rm -rf dist",
     "build": "tsc",
-    "bdd": "cucumber-js"
-  }
+    "bdd": "cucumber-js",
+    "lint": "eslint ."
+  },
+  "repository": "git@github.com:posttech-grupo60/postech-fiap-order-api.git"
 }
