--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
     "typescript-eslint": "^7.9.0",
     "vite-tsconfig-paths": "^4.3.2",
@@ -37,7 +38,7 @@
     "test": "vitest --watch",
     "coverage": "vitest --ui --coverage.enabled=true",
     "clean": "rm -rf dist",
-    "build": "tsc",
+    "build": "tsc & tsc-alias",
     "bdd": "cucumber-js",
     "lint": "eslint ."
   },
