--- a/.github/workflows/elb.yaml
+++ b/.github/workflows/elb.yaml
@@ -33,5 +33,6 @@ jobs:
         aws_session_token: ${{ secrets.AWS_SESSION_TOKEN }}
         application_name: api-order-fiap
         environment_name: Api-order-fiap-env
-        version_label: 1
+        version_label: ${{ github.run_number }}
         region: us-east-1
+        deployment_package: deploy.zip
