--- a/.github/workflows/elb.yaml
+++ b/.github/workflows/elb.yaml
@@ -23,7 +23,7 @@ jobs:
       run: npm run build
 
     - name: Generate deployment package
-      run: zip -r deploy-${{github.sha}}.zip .
+      run: zip -r deploy-${{github.sha}}.zip * .[^.]* -x "**node_modules**"
 
     - name: Deploy to EB
       uses: einaregilsson/beanstalk-deploy@v22
