--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "test": "vitest --watch",
     "coverage": "vitest --ui --coverage.enabled=true",
     "clean": "rm -rf dist",
-    "build": "tsc & tsc-alias",
+    "build": "tsc",
+    "alias": "tsc-alias",
     "bdd": "cucumber-js",
     "lint": "eslint ."
   },
