feat: added saga pattern

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ PORT=3000
 URL_PAYMENT_GATEWAY=
 URL_PRODUCTION_GATEWAY=
 MONGO_URI=
+QUEUE_RESULT_PAYMENT=
+QUEUE_PRODUCTION=
+QUEUE_CREATE_PAYMENT=
