--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Gabriel Barreto <gsbarretobr@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.1656.0",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
