--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "helmet": "^7.1.0",
     "mongoose": "^8.3.5",
     "tsc-alias": "^1.8.10",
     "typescript": "^5.4.5"
